--- a/gradle.properties
+++ b/gradle.properties
@@ -59,5 +59,5 @@ mod_group_id=github.indiasjulen.chococraft
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Julen Indias
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=ChocoCraft by Julen Indias. A mod that introducesdifferent types of chocolate: white chocolate, milk chocolate and dark chocolate. Using these three types of \
+mod_description=ChocoCraft: Sweet Adventure by Julen Indias. A mod that introducesdifferent types of chocolate: white chocolate, milk chocolate and dark chocolate. Using these three types of \
   chocolate the player can craft anew set of tools, weapons, armor which provide them with new effects and abilities. Aswell as a wide variety of decorative blocks and new chocolate-based food such as flavoured chocolate bars.
