--- a/gradle.properties
+++ b/gradle.properties
@@ -47,7 +47,7 @@ mapping_version=2023.08.13-1.20.1
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=chococraft
 # The human-readable display name for the mod.
-mod_name=ChocoCraft
+mod_name=ChocoCraft: Sweetventure
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
@@ -59,5 +59,5 @@ mod_group_id=github.indiasjulen.chococraft
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Julen Indias
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=ChocoCraft: Sweet Adventure by Julen Indias. A mod that introducesdifferent types of chocolate: white chocolate, milk chocolate and dark chocolate. Using these three types of \
+mod_description=ChocoCraft: Sweetventure by Julen Indias. A mod that introducesdifferent types of chocolate: white chocolate, milk chocolate and dark chocolate. Using these three types of \
   chocolate the player can craft anew set of tools, weapons, armor which provide them with new effects and abilities. Aswell as a wide variety of decorative blocks and new chocolate-based food such as flavoured chocolate bars.
